[gd_scene load_steps=5 format=2]

[ext_resource path="res://8heya.gd" type="Script" id=1]
[ext_resource path="res://media/ienonaka4ji.png" type="Texture" id=2]
[ext_resource path="res://SoundNovelText.tscn" type="PackedScene" id=3]
[ext_resource path="res://media/ienonaka6ji.png" type="Texture" id=4]

[node name="8heya" type="Node2D"]
script = ExtResource( 1 )

[node name="pic" type="Node2D" parent="."]
modulate = Color( 0.65098, 0.65098, 0.65098, 1 )

[node name="ienonaka4ji" type="Sprite" parent="pic"]
position = Vector2( 640, 360 )
texture = ExtResource( 2 )

[node name="ienonaka6ji" type="Sprite" parent="pic"]
visible = false
position = Vector2( 640, 360 )
texture = ExtResource( 4 )

[node name="SoundNovelText" parent="." instance=ExtResource( 3 )]
